# GameLife

./: CMakeLists.txt  README.md  air_strike_game_of_life_input.json  game_of_life_input.json  game_of_life_output.json  main.cpp  ~$Письмо.docx
Model/: AirStrikeConfigStruct.h  ConfigStruct.h
Model/Events/: AirstrikeEvent.cpp  AirstrikeEvent.h  IGameEvent.h
Model/FileWriter/: DefaultWriter.cpp  DefaultWriter.h  IWriter.h
Model/GameGrid/: GameGrid.cpp  GameGrid.h
Model/MainClass/: GameLife.cpp  GameLife.h
Model/Parser/: AirStrikeJSONConfigStructParser.cpp  AirStrikeJSONConfigStructParser.h  IParser.h  JSONConfigStructParser.cpp  JSONConfigStructParser.h  StrJONParser.cpp  StrJONParser.h  VectVectBoolResultParser.cpp  VectVectBoolResultParser.h
Model/Reader/: DefaultReader.cpp  DefaultReader.h  IReader.h
Model/Render/: ConsoleRender.cpp  ConsoleRender.h  IRenderer.h
Model/Rules/: IRuleStrategy.h  StandartRule.cpp  StandartRule.h
View/: Main.qml
ViewModel/: GameLifeViewModel.cpp  GameLifeViewModel.h
